Closed Bug 1585584 Opened 6 years ago Closed 6 years ago

Intermittent /css21/pagination/moz-css21-float-page-break-inside-avoid-8.html == w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8-ref.html | image comparison, max difference: 255, number of differing pixels: 155522

Categories

(Core :: CSS Parsing and Computation, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: rgurzau [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=269383149&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/LC6vCVYDS7a6cAqxp90tsA/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://queue.taskcluster.net/v1/task/LC6vCVYDS7a6cAqxp90tsA/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2019-10-02T08:08:57.744Z] 08:08:57 INFO - REFTEST TEST-START | http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8.html == http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8-ref.html
[task 2019-10-02T08:08:57.744Z] 08:08:57 INFO - REFTEST TEST-LOAD | http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8.html | 984 / 7978 (12%)
[task 2019-10-02T08:08:57.744Z] 08:08:57 INFO - REFTEST TEST-LOAD | http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8-ref.html | 984 / 7978 (12%)
[task 2019-10-02T08:08:57.745Z] 08:08:57 INFO - REFTEST TEST-UNEXPECTED-FAIL | http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8.html == http://10.0.2.2:8854/tests/layout/reftests/w3c-css/submitted/css21/pagination/moz-css21-float-page-break-inside-avoid-8-ref.html | image comparison, max difference: 255, number of differing pixels: 155522
[

Yes, investigating.

Flags: needinfo?(lsalzman)
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8d7ad5f385fe clear SharedFTFace lock owner when it is destroyed. r=jfkthame
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → lsalzman
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: