Bug 1585584 - clear SharedFTFace lock owner when it is destroyed. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D48078