gfx/2d/2D.h
@@ -771,30 +771,37 @@ class SharedFTFace : public external::AtomicRefCounted<SharedFTFace> {
   FT_Face GetFace() const { return mFace; }
   SharedFTFaceData* GetData() const { return mData; }
 
-  /** Locks the face for exclusive access by a given owner. Returns true if
-   * the given owner is acquiring the lock for the first time, and false if
+  /** Locks the face for exclusive access by a given owner. Returns false if
+   * the given owner is acquiring the lock for the first time, and true if
    * the owner was the prior owner of the lock. Thus the return value can be
    * used to do owner-specific initialization of the FT face such as setting
    * a size or transform that may have been invalidated by a previous owner.
-   * If no owner is given, then the user should avoid modify any state on
+   * If no owner is given, then the user should avoid modifying any state on
    * the face so as not to invalidate the prior owner's modification.
    */
   bool Lock(void* aOwner = nullptr) {
     mLock.Lock();
-    if (mLockOwner == aOwner || !aOwner) {
-      return true;
-    } else {
-      mLockOwner = aOwner;
-      return false;
-    }
+    return !aOwner || mLastLockOwner.exchange(aOwner) == aOwner;
   }
   void Unlock() { mLock.Unlock(); }
+
+  /** Should be called when a lock owner is destroyed so that we don't have
+   * a dangling pointer to a destroyed owner.
+   */
+  void ForgetLockOwner(void* aOwner) {
+    if (aOwner) {
+      mLastLockOwner.compareExchange(aOwner, nullptr);
+    }
+  }
 
  private:
   FT_Face mFace;
   SharedFTFaceData* mData;
   Mutex mLock;
-  void* mLockOwner;
+  // Remember the last owner of the lock, even after unlocking, to allow users
+  // to avoid reinitializing state on the FT face if the last owner hasn't
+  // changed by the next time it is locked with the same owner.
+  Atomic<void*> mLastLockOwner;
 };
 #endif
 
